# _tpp_5sem

./: CMakeLists.txt  Laba_4.docx  makefile
example_app/: lab1.cpp  lab2.cpp  lab3.cpp  lab3.xlsx  л.р. 1 Гильманов И.И. МКН-315(1).docx  л.р. 2 Гильманов И.И. МКН-315(1).docx  л.р. 3 Гильманов И.И. МКН-315.docx  табл.xlsx
lab1_app/: CMakeLists.txt
lab1_app/example/: CMakeLists.txt  main.cpp
lab1_app/pol_and_sun/: CMakeLists.txt  main.cpp
lab1_app/src/: CMakeLists.txt  main.cpp
lab1_app/task/: report.docx
lab5/: CMakeLists.txt  README.md
lab5/plot/: plot.py
lab5/report/: .~lock.report_for_5lab.docx#  report_for_5lab.docx
lab5/src/: add.cu  add2.cu
report/: .~lock.Без имени 6.ods#  Laba_4.docx  calculation.ods  report_for_lab12.docx  report_for_lab3.docx  report_for_lab6.docx  tpp_5lab.docx  tpp_lab6.docx  ~$port_for_lab3.docx  Без имени 6.ods  ТПП_3_ГильмановИ_МКН315.docx.docx
src/: CMakeLists.txt  main.cpp  makefile  mult_matrix.c  multiplication_matrix.cpp  multiplication_matrix.h  sum_row.c  task1.cpp  task2.cu  task3.cu
